# rfid_bot

./: README.md
rfid_bot_description/: package.xml  setup.cfg  setup.py
rfid_bot_description/launch/: display.launch.py  gazebo.launch.py
rfid_bot_description/meshes/: base_link.stl  motor_back_left_1.stl  motor_back_right_1.stl  motor_front_left_1.stl  motor_front_right_1.stl  motor_holder_back_left_1.stl  motor_holder_back_right_1.stl  motor_holder_front_left_1.stl  motor_holder_front_right_1.stl
rfid_bot_description/urdf/: materials.xacro  rfid_bot.gazebo  rfid_bot.trans  rfid_bot.xacro
rfid_bot_hardware_interface/: CMakeLists.txt  package.xml  rfid_bot_hardware_interface.xml
rfid_bot_hardware_interface/include/rfid_bot_hardware_interface/: rfid_bot_hardware_interface.hpp
rfid_bot_hardware_interface/src/: rfid_bot_hardware_interface.cpp
